header and sidebar completed with collapsed

--- a/scss/components/_components.scss
+++ b/scss/components/_components.scss
@@ -11,4 +11,5 @@
 @import 'tooltip/tooltip';
 @import 'animation/animation';
 @import 'sidebar/sidebar';
+@import 'main/main';
 @import 'table/table';
