--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -566,6 +566,9 @@ select {
 .accordion-item:last-of-type .accordion-button.collapsed {
   border-radius: 0;
 }
+.accordion-item:first-of-type .accordion-button {
+  border-radius: 0;
+}
 .accordion-header {
   display: flex;
   align-items: center;
@@ -1418,13 +1421,12 @@ select {
   background: hsl(0deg, 0%, 100%);
   display: none;
   transition: 0.2s ease-in-out;
-}
-.desktopsidebar .imageC {
-  display: none;
+  z-index: 2000;
 }
 @media screen and (min-width: 62rem) {
   .desktopsidebar {
-    display: block;
+    display: flex;
+    flex-direction: column;
   }
 }
 .desktopsidebar-header {
@@ -1454,6 +1456,16 @@ select {
 .desktopsidebar-header .btn-toggle svg {
   width: 100%;
   height: 100%;
+  transition: all 250ms ease-in-out;
+}
+.desktopsidebar-header .btn-toggle svg.active {
+  transform: rotate(180deg);
+}
+.desktopsidebar-header .full-logo {
+  display: block;
+}
+.desktopsidebar-header .icon-logo {
+  display: none;
 }
 .desktopsidebar .desktopmenu {
   display: flex;
@@ -1540,7 +1552,7 @@ select {
   color: hsl(230deg, 82%, 61%);
 }
 .desktopsidebar .desktopmenu .accordion {
-  padding-bottom: 7.5rem;
+  padding-bottom: 1.5rem;
 }
 .desktopsidebar .desktopmenu .accordion-item {
   padding: 0.625rem 0.75rem;
@@ -1659,33 +1671,47 @@ select {
 .desktopsidebar .desktopmenu .accordion-body .sublist-link:not([disabled]):hover::before {
   content: url("data:image/svg+xml,%3Csvg width='25' height='24' viewBox='0 0 25 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M17 12C17 14.2096 15.2092 16 13 16C10.7908 16 9 14.2096 9 12C9 9.7912 10.7908 8 13 8C15.2092 8 17 9.7912 17 12Z' fill='%234A66ED'/%3E%3C/svg%3E");
 }
-
-.sidebardown {
-  width: 3.4375rem;
+.desktopsidebar.sidecollapsed {
+  width: 4rem;
   transition: 0.2s ease-in-out;
 }
-.sidebardown .text {
+.desktopsidebar.sidecollapsed .desktopsidebar-header .full-logo {
   display: none;
 }
-.sidebardown .accordion-button::after {
-  width: 0%;
-}
-.sidebardown .desktopsidebar {
-  width: 3.75rem;
-}
-.sidebardown .firstLogoImage {
-  display: none;
-}
-.sidebardown .imageC {
+.desktopsidebar.sidecollapsed .desktopsidebar-header .icon-logo {
   display: block;
 }
-.sidebardown .btn-toggle {
-  transform: translateY(-50%) rotate(180deg);
+.desktopsidebar.sidecollapsed .menulink .text {
+  display: none;
+}
+.desktopsidebar.sidecollapsed .accordion-item, .desktopsidebar.sidecollapsed .accordion-header {
+  background: transparent;
+}
+.desktopsidebar.sidecollapsed .accordion-button {
+  background: transparent;
+}
+.desktopsidebar.sidecollapsed .accordion-button .icon {
+  width: 100%;
+}
+.desktopsidebar.sidecollapsed .accordion-button .text {
+  display: none;
+}
+.desktopsidebar.sidecollapsed .accordion-button::after {
+  display: none;
 }
 
 /**=====================================================
                       SIDEBAR END
 =====================================================**/
+.main {
+  margin-left: 16.25rem;
+  transition: 0.2s ease-in-out;
+}
+.main.maincollapsed {
+  margin-left: 4rem;
+  transition: 0.2s ease-in-out;
+}
+
 th {
   color: #8A92A6;
   font-weight: 500;
@@ -1714,4 +1740,4 @@ td {
 
 .serialNumber {
   color: #232D42;
-}/*# sourceMappingURL=style.css.map */
+}
