--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1704,12 +1704,20 @@ select {
                       SIDEBAR END
 =====================================================**/
 .main {
-  margin-left: 16.25rem;
   transition: 0.2s ease-in-out;
 }
+@media screen and (min-width: 62rem) {
+  .main {
+    margin-left: 16.25rem;
+  }
+}
 .main.maincollapsed {
-  margin-left: 4rem;
   transition: 0.2s ease-in-out;
+}
+@media screen and (min-width: 62rem) {
+  .main.maincollapsed {
+    margin-left: 4rem;
+  }
 }
 
 th {
