--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -651,7 +651,7 @@ select {
   margin-left: auto;
   left: 100%;
   border-radius: 100%;
-  padding: 0.875rem;
+  padding: 0.5rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -670,6 +670,92 @@ select {
 /**=====================================================
                 FOOTER SECTION START
 =====================================================**/
+.footer {
+  background: hsl(0deg, 0%, 100%);
+  margin-left: 0rem;
+  padding: 1rem;
+  overflow: hidden;
+}
+@media screen and (min-width: 62rem) {
+  .footer {
+    margin-left: 16.25rem;
+  }
+}
+.footer-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+@media screen and (min-width: 62rem) {
+  .footer-content {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+.footer .footerlist {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  gap: 0.625rem;
+}
+.footer .footerlist-link {
+  color: hsl(221deg, 31%, 20%);
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.75rem;
+  font-weight: normal;
+  line-height: 1.4;
+  position: relative;
+}
+.footer .footerlist-link::before {
+  content: "";
+  position: absolute;
+  bottom: 0.0625rem;
+  left: 0;
+  height: 0.0625rem;
+  width: 0;
+  background: hsl(230deg, 82%, 61%);
+  transition: 250ms;
+}
+@media screen and (min-width: 62rem) {
+  .footer .footerlist-link {
+    font-family: "Inter";
+    font-style: normal;
+    font-size: 0.875rem;
+    font-weight: normal;
+    line-height: 1.4;
+  }
+}
+.footer .footerlist-link:not([disabled]):hover {
+  color: hsl(230deg, 82%, 61%);
+}
+.footer .footerlist-link:not([disabled]):hover::before {
+  width: 100%;
+}
+.footer .text-copyright {
+  color: hsl(221deg, 31%, 20%);
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.75rem;
+  font-weight: normal;
+  line-height: 1.4;
+  text-align: center;
+}
+@media screen and (min-width: 62rem) {
+  .footer .text-copyright {
+    font-family: "Inter";
+    font-style: normal;
+    font-size: 0.875rem;
+    font-weight: normal;
+    line-height: 1.4;
+    text-align: right;
+  }
+}
+
 /**=====================================================
                 FOOTER SECTION END
 =====================================================**/
@@ -1705,6 +1791,8 @@ select {
 =====================================================**/
 .main {
   transition: 0.2s ease-in-out;
+  padding: 1rem;
+  overflow: hidden;
 }
 @media screen and (min-width: 62rem) {
   .main {
@@ -1719,33 +1807,350 @@ select {
     margin-left: 4rem;
   }
 }
-
-th {
-  color: #8A92A6;
-  font-weight: 500;
-  line-height: 23.2px;
-  font-size: 16px;
-  min-width: 6.875rem;
+.main .tableinfo {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
-
-td {
-  font-family: "Inter";
-  color: #232D42;
+.main .tableinfo-header {
+  background: hsl(0deg, 0%, 100%);
+  padding: 0.875rem;
+  border-radius: 0.25rem;
+  border-radius: 0.25rem;
 }
-
-.minWidth {
-  min-width: 0%;
+@media screen and (min-width: 62rem) {
+  .main .tableinfo-header {
+    padding: 0.75rem 1.25rem 1.5rem;
+  }
 }
-
-.captions {
+.main .tableinfo-header .tablefilter {
+  display: flex;
+  flex-direction: column;
+  gap: 1.25rem;
+}
+.main .tableinfo-header .tablefilter-header .tablefilter-title {
+  color: hsl(224deg, 10%, 46%);
   font-family: "Inter";
   font-style: normal;
   font-size: 1.25rem;
-  font-weight: normal;
+  font-weight: 600;
   line-height: 1.75;
-  color: #6A7081;
+}
+.main .tableinfo-header .tablefilter-body .formfilter {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+  flex-wrap: wrap;
+}
+.main .tableinfo-header .tablefilter-body .formfilter .inputbox {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  max-width: 13.75rem;
+  position: relative;
+}
+.main .tableinfo-header .tablefilter-body .formfilter .inputbox.idbox {
+  max-width: 6.875rem;
+}
+.main .tableinfo-header .tablefilter-body .formfilter .inputbox.selectbox {
+  min-width: 12.5rem;
+  max-width: 15rem;
+}
+.main .tableinfo-header .tablefilter-body .formfilter .inputbox .inputlabel {
+  color: hsl(223deg, 14%, 60%);
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.4;
+}
+.main .tableinfo-header .tablefilter-body .formfilter .inputbox .inputfield {
+  color: hsl(221deg, 31%, 20%);
+  border: solid 0.0625rem hsl(224deg, 13%, 84%);
+  border-radius: 0.25rem;
+  border-radius: 0.25rem;
+  padding: 0.75rem 1rem;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.875rem;
+  font-weight: normal;
+  line-height: 1.4;
+}
+.main .tableinfo-header .tablefilter-body .formfilter .inputbox .inputfield::after {
+  color: hsl(224deg, 13%, 84%);
+}
+.main .tableinfo-header .tablefilter-body .formfilter .inputbox .selectfield {
+  color: hsl(221deg, 31%, 20%);
+  border: solid 0.0625rem hsl(224deg, 13%, 84%);
+  border-radius: 0.25rem;
+  border-radius: 0.25rem;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.875rem;
+  font-weight: normal;
+  line-height: 1.4;
+  padding: 0.75rem 1rem;
+  background: hsl(0deg, 0%, 100%) url("data:image/svg+xml,%3Csvg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M16 10L12 14L8 10' stroke='%238A92A6' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'/%3E%3C/svg%3E%0A") no-repeat center right 3%;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+}
+.main .tableinfo-header .tablefilter-body .formfilter .inputbox .selectfield option {
+  color: hsl(221deg, 31%, 20%);
+}
+.main .tableinfo-header .tablefilter-body .formfilter .inputbox .btn-reset {
+  position: absolute;
+  top: 52%;
+  transform: translateY(-50%);
+  right: 1.875rem;
+  background: transparent;
+  border: none;
+  z-index: 100;
+}
+.main .tableinfo-header .tablefilter-body .formfilter .inputbox .error-message {
+  display: none;
+  color: hsl(0deg, 96%, 67%);
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.75rem;
+  font-weight: 500;
+  line-height: 1.4;
+}
+.main .tableinfo-header .tablefilter-body .formfilter .inputbox.errorfield .inputfield,
+.main .tableinfo-header .tablefilter-body .formfilter .inputbox.errorfield .selectfield {
+  border-color: hsl(0deg, 96%, 67%);
+}
+.main .tableinfo-header .tablefilter-body .formfilter .inputbox.errorfield .error-message {
+  display: block;
+}
+.main .tableinfo-header .tablefilter-body .formfilter .submitbox {
+  width: 9.5625rem;
+}
+.main .tableinfo-header .tablefilter-body .formfilter .submitbox .btn-filter {
+  width: 100%;
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.875rem;
+  font-weight: 600;
+  line-height: 1.4;
+  padding: 0.71875rem 2rem;
+  background: hsl(230deg, 82%, 61%);
+  color: hsl(0deg, 0%, 100%);
+  border-radius: 0.25rem;
+  border-radius: 0.25rem;
+  text-align: center;
+  transition: background 250ms ease-in-out;
+}
+.main .tableinfo-header .tablefilter-body .formfilter .submitbox .btn-filter:not([disabled]):hover {
+  background: #1535d5;
+}
+.main .tableinfo-body {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+  background: hsl(0deg, 0%, 100%);
+  padding: 1rem 1.25rem 2rem;
+  border-radius: 0.25rem;
+  border-radius: 0.25rem;
+  overflow: hidden;
+}
+.main .tableinfo-body .tableheader .tabletitle {
+  color: hsl(224deg, 10%, 46%);
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 1.25rem;
+  font-weight: 600;
+  line-height: 1.75;
 }
 
-.serialNumber {
-  color: #232D42;
+table.dataTable {
+  border-collapse: collapse !important;
+  margin: 0;
+}
+
+.dataTable_wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+
+.table {
+  overflow-x: scroll;
+  max-width: 99.5%;
+}
+.table thead {
+  background: hsl(228deg, 33%, 97%);
+  vertical-align: middle;
+}
+@media screen and (max-width: 48rem) {
+  .table thead {
+    display: none;
+  }
+}
+.table thead tr {
+  border-bottom: solid 0.0625rem hsl(210deg, 14%, 89%);
+}
+.table thead tr th {
+  color: hsl(223deg, 14%, 60%);
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.5;
+  text-align: center;
+  border-left: solid 0.0625rem hsl(210deg, 14%, 89%);
+  padding: 0.875rem 0.5rem;
+  vertical-align: middle;
+}
+.table tbody {
+  vertical-align: middle;
+}
+@media screen and (max-width: 48rem) {
+  .table tbody {
+    border-top: solid 0.0625rem hsl(210deg, 14%, 89%);
+    border-right: solid 0.0625rem hsl(210deg, 14%, 89%);
+    overflow: hidden;
+  }
+}
+.table tbody tr {
+  border-bottom: solid 0.0625rem hsl(210deg, 14%, 89%);
+}
+@media screen and (max-width: 48rem) {
+  .table tbody tr {
+    overflow: hidden;
+  }
+}
+.table tbody tr td {
+  color: hsl(221deg, 31%, 20%);
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.875rem;
+  font-weight: normal;
+  line-height: 1.4;
+  text-align: center;
+  border-left: solid 0.0625rem hsl(210deg, 14%, 89%);
+  padding: 0.875rem 0.5rem;
+  vertical-align: middle;
+}
+.table tbody tr td td:before {
+  content: attr(data);
+}
+.table tbody tr td .title, .table tbody tr td .text {
+  color: inherit;
+  font: inherit;
+}
+.table tbody tr td .title {
+  display: none;
+}
+@media screen and (max-width: 48rem) {
+  .table tbody tr td .title {
+    display: block;
+    overflow: hidden;
+  }
+}
+@media screen and (max-width: 74.9375rem) {
+  .table tbody tr td:first-of-type {
+    width: 3rem;
+  }
+}
+@media screen and (max-width: 48rem) {
+  .table tbody tr td {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0.5rem;
+  }
+  .table tbody tr td:first-of-type {
+    width: 3rem;
+    width: 95%;
+  }
+}
+
+div.dataTables_wrapper div.dataTables_info {
+  position: absolute;
+  color: hsl(223deg, 14%, 60%);
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 0.875rem;
+  font-weight: normal;
+  line-height: 1.4;
+}
+@media screen and (min-width: 62rem) {
+  div.dataTables_wrapper div.dataTables_info {
+    padding-top: 2.1875rem;
+    font-family: "Inter";
+    font-style: normal;
+    font-size: 1rem;
+    font-weight: normal;
+    line-height: 1.5;
+  }
+}
+
+div.dataTables_wrapper div.dataTables_paginate {
+  display: flex;
+  justify-content: flex-end;
+  margin-top: 3.4375rem;
+}
+@media screen and (min-width: 62rem) {
+  div.dataTables_wrapper div.dataTables_paginate {
+    margin-top: 1.875rem;
+  }
+}
+div.dataTables_wrapper div.dataTables_paginate .pagination {
+  border: solid 0.0625rem hsl(210deg, 14%, 89%);
+  border-radius: 0.25rem;
+  border-radius: 0.25rem;
+  gap: 0.0625rem;
+  overflow: hidden;
+}
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item .page-link {
+  border: 0;
+  border-radius: 0;
+  padding: 0.5rem 1.5rem;
+  background: hsl(0deg, 0%, 100%);
+  color: hsl(230deg, 82%, 61%);
+  border-right: solid 0.0625rem hsl(210deg, 14%, 89%);
+  font-family: "Inter";
+  font-style: normal;
+  font-size: 1rem;
+  font-weight: normal;
+  line-height: 1.5;
+}
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item .page-link:focus {
+  box-shadow: none;
+  outline: none;
+}
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item:hover:not(.active):not(.disabled) .page-link {
+  background: hsl(230deg, 82%, 61%);
+  color: hsl(0deg, 0%, 100%);
+}
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.active .page-link {
+  background: hsl(230deg, 82%, 61%);
+  color: hsl(0deg, 0%, 100%);
+}
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.previous .page-link, div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page-link {
+  font-size: 0;
+  color: transparent;
+  position: relative;
+  min-height: 2.5rem;
+}
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.previous .page-link::before, div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page-link::before {
+  position: absolute;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.previous .page-link {
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%234A66ED' class='bi bi-chevron-left' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3E%3C/svg%3E");
+}
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.previous .page-link:not([disabled]):hover {
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23ffffff' class='bi bi-chevron-left' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M11.354 1.646a.5.5 0 0 1 0 .708L5.707 8l5.647 5.646a.5.5 0 0 1-.708.708l-6-6a.5.5 0 0 1 0-.708l6-6a.5.5 0 0 1 .708 0z'/%3E%3C/svg%3E");
+}
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page-link {
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%234A66ED' class='bi bi-chevron-right' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+}
+div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page-link:not([disabled]):hover {
+  content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23ffffff' class='bi bi-chevron-right' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
 }
