--- a/scss/partials/_breakpoints.scss
+++ b/scss/partials/_breakpoints.scss
@@ -9,12 +9,15 @@ $breakpoints: (break-321: 321,
 	break-480: 480,
 	break-500: 500,
 	break-576: 576,
+	mobile: 768,
 	break-768: 768,
+	break-991: 991,
 	break-992: 992,
 	break-1024: 1024,
 	break-1100: 1100,
 	break-1169: 1170,
 	break-1200: 1200,
+	break-1199: 1199,
 	break-1367: 1367,
 	break-1400: 1400
 );
@@ -84,8 +87,20 @@ $breakpoints: (break-321: 321,
 		}
 	}
 
+	@else if $breakpoints==mobile {
+		@media screen and (max-width: break(break-768)) {
+			@content;
+		}
+	}
+
 	@else if $breakpoints==tab992 {
 		@media screen and (min-width: break(break-992)) {
+			@content;
+		}
+	}
+
+	@else if $breakpoints==tab {
+		@media screen and (max-width: break(break-991)) {
 			@content;
 		}
 	}
@@ -104,6 +119,12 @@ $breakpoints: (break-321: 321,
 
 	@else if $breakpoints==desktop1170 {
 		@media screen and (min-width: break(break-1170)) {
+			@content;
+		}
+	}
+
+	@else if $breakpoints==desktop {
+		@media screen and (max-width: break(break-1199)) {
 			@content;
 		}
 	}
@@ -139,7 +160,9 @@ $breakpoints: (break-321: 321,
 // @include breakpoint(mobile576) {}
 // @include breakpoint(mobile600) {}
 // @include breakpoint(mobile768) {}
+// @include breakpoint(mobile) {}
 // @include breakpoint(tab992) {}
+// @include breakpoint(tab) {}
 // @include breakpoint(desktop1024) {}
 // @include breakpoint(desktop1169) {}
 // @include breakpoint(desktop1100) {}
