--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1189,12 +1189,12 @@ select {
   fill: none;
 }
 .offcanvas-body .mobilemenu .menulink .text {
-  color: hsl(223deg, 14%, 60%);
+  color: #354464;
   font-family: "Inter";
   font-style: normal;
-  font-size: 1rem;
+  font-size: 0.875rem;
   font-weight: normal;
-  line-height: 1.75;
+  line-height: 1.4;
 }
 .offcanvas-body .mobilemenu .menulink.active::before {
   height: 100%;
@@ -1267,12 +1267,12 @@ select {
   stroke: hsl(223deg, 14%, 60%);
 }
 .offcanvas-body .mobilemenu .accordion-item .accordion-header .accordion-button .text {
-  color: hsl(223deg, 14%, 60%);
+  color: #354464;
   font-family: "Inter";
   font-style: normal;
-  font-size: 1rem;
+  font-size: 0.875rem;
   font-weight: normal;
-  line-height: 1.75;
+  line-height: 1.4;
 }
 .offcanvas-body .mobilemenu .accordion-item.active::before {
   height: 100%;
@@ -1320,11 +1320,12 @@ select {
 .offcanvas-body .mobilemenu .accordion-body .sublist-link {
   padding: 0.5rem 1.5rem;
   color: hsl(223deg, 14%, 60%);
+  color: #354464;
   font-family: "Inter";
   font-style: normal;
-  font-size: 1rem;
+  font-size: 0.75rem;
   font-weight: normal;
-  line-height: 1.75;
+  line-height: 1.4;
   position: relative;
 }
 .offcanvas-body .mobilemenu .accordion-body .sublist-link::before {
@@ -1604,12 +1605,12 @@ select {
   fill: none;
 }
 .desktopsidebar .desktopmenu .menulink .text {
-  color: hsl(223deg, 14%, 60%);
+  color: #354464;
   font-family: "Inter";
   font-style: normal;
-  font-size: 1rem;
+  font-size: 0.875rem;
   font-weight: normal;
-  line-height: 1.75;
+  line-height: 1.4;
 }
 .desktopsidebar .desktopmenu .menulink.active::before {
   height: 100%;
@@ -1682,12 +1683,12 @@ select {
   stroke: hsl(223deg, 14%, 60%);
 }
 .desktopsidebar .desktopmenu .accordion-item .accordion-header .accordion-button .text {
-  color: hsl(223deg, 14%, 60%);
+  color: #354464;
   font-family: "Inter";
   font-style: normal;
-  font-size: 1rem;
+  font-size: 0.875rem;
   font-weight: normal;
-  line-height: 1.75;
+  line-height: 1.4;
 }
 .desktopsidebar .desktopmenu .accordion-item.active::before {
   height: 100%;
@@ -1734,12 +1735,12 @@ select {
 }
 .desktopsidebar .desktopmenu .accordion-body .sublist-link {
   padding: 0.5rem 1.5rem;
-  color: hsl(223deg, 14%, 60%);
+  color: #354464;
   font-family: "Inter";
   font-style: normal;
-  font-size: 1rem;
+  font-size: 0.75rem;
   font-weight: normal;
-  line-height: 1.75;
+  line-height: 1.4;
   position: relative;
 }
 .desktopsidebar .desktopmenu .accordion-body .sublist-link::before {
@@ -1940,10 +1941,13 @@ select {
 }
 .main .tableinfo-header .tablefilter-body .formfilter .submitbox {
   width: 100%;
+  display: flex;
+  align-items: center;
 }
 @media screen and (min-width: 36rem) {
   .main .tableinfo-header .tablefilter-body .formfilter .submitbox {
     width: 9.5625rem;
+    margin-top: 0.25rem;
   }
 }
 .main .tableinfo-header .tablefilter-body .formfilter .submitbox .btn-filter {
@@ -2188,4 +2192,32 @@ div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page
 }
 div.dataTables_wrapper div.dataTables_paginate .pagination .page-item.next .page-link:not([disabled]):hover {
   content: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='%23ffffff' class='bi bi-chevron-right' viewBox='0 0 16 16'%3E%3Cpath fill-rule='evenodd' d='M4.646 1.646a.5.5 0 0 1 .708 0l6 6a.5.5 0 0 1 0 .708l-6 6a.5.5 0 0 1-.708-.708L10.293 8 4.646 2.354a.5.5 0 0 1 0-.708z'/%3E%3C/svg%3E");
+}
+
+.auth {
+  width: 100%;
+  overflow: hidden;
+  margin: 0;
+  display: flex;
+  height: 100vh;
+}
+.auth .authentication {
+  width: 50%;
+}
+.auth-thumbnail {
+  width: 50%;
+  display: none;
+}
+@media screen and (min-width: 62rem) {
+  .auth-thumbnail {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.auth-thumbnail img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
