--- a/scss/components/offcanvas/_offcanvas.scss
+++ b/scss/components/offcanvas/_offcanvas.scss
@@ -120,8 +120,8 @@
 				}
 
 				.text {
-					color: $secondarytext;
-					@include font-face($primaryFont, style('normal'), size(16), weight('normal'), line-height(28, 16));
+					color: lighten($textprimary, 10%);
+					@include font-face($primaryFont, style("normal"), size(14), weight("normal"), line-height(19.6, 14));
 				}
 
 				&.active {
@@ -224,8 +224,8 @@
 							}
 			
 							.text {
-								color: $secondarytext;
-								@include font-face($primaryFont, style('normal'), size(16), weight('normal'), line-height(28, 16));
+								color: lighten($textprimary, 10%);
+								@include font-face($primaryFont, style("normal"), size(14), weight("normal"), line-height(19.6, 14));
 							}
 						}
 					}
@@ -311,7 +311,8 @@
 						&-link {
 							padding: length(8) length(24);
 							color: $secondarytext;
-							@include font-face($primaryFont, style('normal'), size(16), weight('normal'), line-height(28, 16));
+							color: lighten($textprimary, 10%);
+							@include font-face($primaryFont, style("normal"), size(12), weight("normal"), line-height(16.8, 12));
 							position: relative;
 
 							&::before {
