--- a/scss/components/sidebar/_sidebar.scss
+++ b/scss/components/sidebar/_sidebar.scss
@@ -104,14 +104,8 @@
       }
 
       .text {
-        color: $secondarytext;
-        @include font-face(
-          $primaryFont,
-          style("normal"),
-          size(16),
-          weight("normal"),
-          line-height(28, 16)
-        );
+        color: lighten($textprimary, 10%);
+        @include font-face($primaryFont, style("normal"), size(14), weight("normal"), line-height(19.6, 14));
       }
 
       &.active {
@@ -214,14 +208,8 @@
             }
 
             .text {
-              color: $secondarytext;
-              @include font-face(
-                $primaryFont,
-                style("normal"),
-                size(16),
-                weight("normal"),
-                line-height(28, 16)
-              );
+              color: lighten($textprimary, 10%);
+              @include font-face($primaryFont, style("normal"), size(14), weight("normal"), line-height(19.6, 14));
             }
           }
         }
@@ -306,14 +294,8 @@
 
           &-link {
             padding: length(8) length(24);
-            color: $secondarytext;
-            @include font-face(
-              $primaryFont,
-              style("normal"),
-              size(16),
-              weight("normal"),
-              line-height(28, 16)
-            );
+            color: lighten($textprimary, 10%);
+            @include font-face($primaryFont, style("normal"), size(12), weight("normal"), line-height(16.8, 12));
             position: relative;
 
             &::before {
