--- a/scss/components/sidebar/_sidebar.scss
+++ b/scss/components/sidebar/_sidebar.scss
@@ -2,7 +2,7 @@
                       SIDEBAR START
 =====================================================**/
 .desktopsidebar {
-  width: length(260);
+  width: length(220);
   position: fixed;
   top: 0;
   left: 0;
@@ -70,7 +70,7 @@
     }
 
     .menulink {
-      padding: length(10) length(12);
+      padding: length(5) length(12);
       @include flex-center-vert;
       gap: length(8);
       position: relative;
@@ -88,7 +88,7 @@
       }
 
       .icon {
-        @include square(length(24));
+        @include square(length(20));
         @include flex-center;
         overflow: hidden;
 
@@ -134,8 +134,6 @@
       }
 
       &:hover:not(.active) {
-        // background: $itemhover;
-
         &::before {
           @include h100;
         }
@@ -165,7 +163,7 @@
       padding-bottom: length(24);
 
       &-item {
-        padding: length(10) length(12);
+        padding: length(5) length(12);
         position: relative;
 
         &::before {
@@ -187,7 +185,7 @@
             gap: length(8);
 
             .icon {
-              @include square(length(24));
+              @include square(length(20));
               @include flex-center;
               overflow: hidden;
 
@@ -288,12 +286,14 @@
       }
 
       &-body {
+        padding: length(14);
+
         .sublist {
           @include list-vertical;
           padding-left: length(8);
 
           &-link {
-            padding: length(8) length(24);
+            padding: length(4) length(24);
             color: lighten($textprimary, 10%);
             @include font-face($primaryFont, style("normal"), size(12), weight("normal"), line-height(16.8, 12));
             position: relative;
@@ -301,7 +301,7 @@
             &::before {
               position: absolute;
               top: 50%;
-              left: length(-8);
+              left: length(0);
               @include transform(translateY(-50%));
               @include square(length(24));
               content: url("data:image/svg+xml,%3Csvg width='25' height='24' viewBox='0 0 25 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath opacity='0.4' d='M17 12C17 14.2096 15.2092 16 13 16C10.7908 16 9 14.2096 9 12C9 9.7912 10.7908 8 13 8C15.2092 8 17 9.7912 17 12Z' fill='black'/%3E%3C/svg%3E%0A");
@@ -335,6 +335,8 @@
     }
 
     .menulink {
+      @include flex-center;
+
       .text {
         display: none;
       }
@@ -348,9 +350,10 @@
 
       &-button {
         background: transparent;
+          @include flex-center;
 
         .icon {
-          @include w100;
+          @include flex-center;
         }
 
         .text {
