--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1085,14 +1085,9 @@ select {
 }
 
 .offcanvas {
-  width: 100%;
+  width: 15rem;
   min-height: 110vh;
   z-index: 999999;
-}
-@media screen and (min-width: 31.25rem) {
-  .offcanvas {
-    width: 18.75rem;
-  }
 }
 .offcanvas-header {
   position: relative;
@@ -1155,7 +1150,7 @@ select {
   flex-direction: column;
 }
 .offcanvas-body .mobilemenu .menulink {
-  padding: 0.625rem 0.75rem;
+  padding: 0.3125rem 0.75rem;
   display: flex;
   align-items: center;
   gap: 0.5rem;
@@ -1174,8 +1169,8 @@ select {
   border-bottom-right-radius: 0.25rem;
 }
 .offcanvas-body .mobilemenu .menulink .icon {
-  height: 1.5rem;
-  width: 1.5rem;
+  height: 1.25rem;
+  width: 1.25rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1223,10 +1218,10 @@ select {
   color: hsl(230deg, 82%, 61%);
 }
 .offcanvas-body .mobilemenu .accordion {
-  padding-bottom: 7.5rem;
+  padding-bottom: 3rem;
 }
 .offcanvas-body .mobilemenu .accordion-item {
-  padding: 0.625rem 0.75rem;
+  padding: 0.3125rem 0.75rem;
   position: relative;
 }
 .offcanvas-body .mobilemenu .accordion-item::before {
@@ -1248,8 +1243,8 @@ select {
   gap: 0.5rem;
 }
 .offcanvas-body .mobilemenu .accordion-item .accordion-header .accordion-button .icon {
-  height: 1.5rem;
-  width: 1.5rem;
+  height: 1.25rem;
+  width: 1.25rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1309,6 +1304,9 @@ select {
 .offcanvas-body .mobilemenu .accordion-button::after {
   transform: rotate(-90deg);
 }
+.offcanvas-body .mobilemenu .accordion-body {
+  padding: 0.875rem;
+}
 .offcanvas-body .mobilemenu .accordion-body .sublist {
   margin: 0;
   padding: 0;
@@ -1318,7 +1316,7 @@ select {
   padding-left: 0.5rem;
 }
 .offcanvas-body .mobilemenu .accordion-body .sublist-link {
-  padding: 0.5rem 1.5rem;
+  padding: 0.25rem 1.5rem;
   color: hsl(223deg, 14%, 60%);
   color: #354464;
   font-family: "Inter";
@@ -1331,10 +1329,10 @@ select {
 .offcanvas-body .mobilemenu .accordion-body .sublist-link::before {
   position: absolute;
   top: 50%;
-  left: -0.5rem;
+  left: 0rem;
   transform: translateY(-50%);
-  height: 1.5rem;
-  width: 1.5rem;
+  height: 1.25rem;
+  width: 1.25rem;
   content: url("data:image/svg+xml,%3Csvg width='25' height='24' viewBox='0 0 25 24' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath opacity='0.4' d='M17 12C17 14.2096 15.2092 16 13 16C10.7908 16 9 14.2096 9 12C9 9.7912 10.7908 8 13 8C15.2092 8 17 9.7912 17 12Z' fill='black'/%3E%3C/svg%3E%0A");
 }
 .offcanvas-body .mobilemenu .accordion-body .sublist-link:not([disabled]):hover {
@@ -1500,7 +1498,7 @@ select {
                       SIDEBAR START
 =====================================================**/
 .desktopsidebar {
-  width: 16.25rem;
+  width: 13.75rem;
   position: fixed;
   top: 0;
   left: 0;
@@ -1571,7 +1569,7 @@ select {
   background: hsl(224deg, 13%, 84%);
 }
 .desktopsidebar .desktopmenu .menulink {
-  padding: 0.625rem 0.75rem;
+  padding: 0.3125rem 0.75rem;
   display: flex;
   align-items: center;
   gap: 0.5rem;
@@ -1590,8 +1588,8 @@ select {
   border-bottom-right-radius: 0.25rem;
 }
 .desktopsidebar .desktopmenu .menulink .icon {
-  height: 1.5rem;
-  width: 1.5rem;
+  height: 1.25rem;
+  width: 1.25rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1642,7 +1640,7 @@ select {
   padding-bottom: 1.5rem;
 }
 .desktopsidebar .desktopmenu .accordion-item {
-  padding: 0.625rem 0.75rem;
+  padding: 0.3125rem 0.75rem;
   position: relative;
 }
 .desktopsidebar .desktopmenu .accordion-item::before {
@@ -1664,8 +1662,8 @@ select {
   gap: 0.5rem;
 }
 .desktopsidebar .desktopmenu .accordion-item .accordion-header .accordion-button .icon {
-  height: 1.5rem;
-  width: 1.5rem;
+  height: 1.25rem;
+  width: 1.25rem;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -1725,6 +1723,9 @@ select {
 .desktopsidebar .desktopmenu .accordion-button::after {
   transform: rotate(-90deg);
 }
+.desktopsidebar .desktopmenu .accordion-body {
+  padding: 0.875rem;
+}
 .desktopsidebar .desktopmenu .accordion-body .sublist {
   margin: 0;
   padding: 0;
@@ -1734,7 +1735,7 @@ select {
   padding-left: 0.5rem;
 }
 .desktopsidebar .desktopmenu .accordion-body .sublist-link {
-  padding: 0.5rem 1.5rem;
+  padding: 0.25rem 1.5rem;
   color: #354464;
   font-family: "Inter";
   font-style: normal;
@@ -1746,7 +1747,7 @@ select {
 .desktopsidebar .desktopmenu .accordion-body .sublist-link::before {
   position: absolute;
   top: 50%;
-  left: -0.5rem;
+  left: 0rem;
   transform: translateY(-50%);
   height: 1.5rem;
   width: 1.5rem;
@@ -1768,6 +1769,11 @@ select {
 .desktopsidebar.sidecollapsed .desktopsidebar-header .icon-logo {
   display: block;
 }
+.desktopsidebar.sidecollapsed .menulink {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .desktopsidebar.sidecollapsed .menulink .text {
   display: none;
 }
@@ -1776,9 +1782,14 @@ select {
 }
 .desktopsidebar.sidecollapsed .accordion-button {
   background: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .desktopsidebar.sidecollapsed .accordion-button .icon {
-  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .desktopsidebar.sidecollapsed .accordion-button .text {
   display: none;
@@ -1797,7 +1808,7 @@ select {
 }
 @media screen and (min-width: 62rem) {
   .main {
-    margin-left: 16.25rem;
+    margin-left: 13.75rem;
   }
 }
 .main.maincollapsed {
